complete transaction layer without OCC